1. убрал ResponseStatus над методом TodoController.getAll() 2. Поменял @ResponseStatus в методах контроллера на ResponseEntity 3. Добавил Mapper'ы для конвертации между TodoTask и TodoTaskDto + починил её 4. Обработал DataAccessException